# VORTEX

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml  requirements.txt
.ai-agent/: config.toml  models.txt
.ai-agent/tools/: test_tool.py
.github/workflows/: ci.yml  publish-pypi.yml
agent/: agent.py  events.py  session.py
client/: llm_client.py  response.py
config/: config.py  loader.py
context/: code_index.py  manager.py  workspace_snapshot.py
docker/: entrypoint.sh
docs/: api-keys.md
prompts/: system.py
scripts/: install.sh  test_tool.py
tests/: test_agent_guardrails.py  test_credential_setup.py  test_gemini_compat.py  test_main_cli.py  test_main_startup.py  test_model_discovery.py  test_model_health.py  test_ollama_setup.py  test_tui.py  test_versioning.py
tools/builtin/: __init__.py  find_symbol.py  shell.py  web_search.py
tools/mcp/: client.py  mcp_manager.py
ui/: tui.py
utils/: credential_setup.py  model_catalog.py  model_discovery.py  model_health.py  ollama_setup.py  provider_auth.py  text.py  versioning.py  workspace_history.py
workspace/: README.md  hello  index.html  script.js  style.css
workspace/vortex-frontend/: package-lock.json  package.json
workspace/vortex-frontend/app/: globals.css  page.tsx
