[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vortex-agent-cli"
version = "0.1.0.3"
description = "Art-forward terminal AI agent with OpenAI-compatible tools and an aurora TUI."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Jagdeep Singh" }]
keywords = ["ai-agent", "cli", "coding-agent", "terminal", "tui", "rich"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "openai>=1.0",
    "platformdirs>=4.0",
    "prompt_toolkit>=3.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "tiktoken>=0.7",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/jagdep-singh/VORTEX"
Repository = "https://github.com/jagdep-singh/VORTEX"
Issues = "https://github.com/jagdep-singh/VORTEX/issues"

[project.scripts]
vortex = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agent*", "client*", "config*", "context*", "hooks*", "prompts*", "safety*", "tools*", "ui*", "utils*"]
namespaces = true
